changed cat images

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img src="https://lorempixel.com/200/100/business/1">
+                  <img src="https://lorempixel.com/200/100/abstract/1">
                   <span class="card-title">Restaurant Items</span>
                 </div>
               </div>
@@ -53,7 +53,7 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img src="https://lorempixel.com/200/100/business/2">
+                  <img src="https://lorempixel.com/200/100/abstract/2">
                   <span class="card-title">Home Items</span>
                 </div>
             
@@ -63,7 +63,7 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img src="https://lorempixel.com/200/100/business/3">
+                  <img src="https://lorempixel.com/200/100/abstract/3">
                   <span class="card-title">Canteen Items</span>
                 </div>
               </div>
