added category images

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img src="images/category.png">
+                  <img src="images/category-1.png">
                   <span class="card-title black-text">Restaurant
                       <span class="card-sub-title grey-text"> (345)</span>
                   </span>
@@ -72,7 +72,7 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img src="images/category.png">
+                  <img src="images/category-2.png">
                   <span class="card-title black-text">Home
                     <span class="card-sub-title grey-text"> (345)</span>
                   </span>
@@ -84,7 +84,7 @@
             <div class="col s12 m4">
               <div class="card">
                 <div class="card-image">
-                  <img src="images/category.png">
+                  <img src="images/category-3.png">
                   <span class="card-title black-text">Canteen
                     <span class="card-sub-title grey-text"> (345)
                     </span>
