--- a/index.html
+++ b/index.html
@@ -23,11 +23,34 @@
         <nav class="z-depth-0 ">
             <div class="nav-wrapper white black-text">
             <a href="#" class="brand-logo grey-text">Piping<span class="black-text">Rock</span></a>
+            
+            <!-- Submenu:supplements -->
+            <ul id="supplements" class="dropdown-content z-depth-2">
+                <li><a href="#!">CoQ10</a></li>
+                <li><a href="#!">Probiotics</a></li>
+                <li><a href="#!">Men's Vitamins</a></li>
+                <li><a href="#!">Women's Vitamins</a></li>
+            </ul>
+            <!-- Submenu:essential-oils -->
+            <ul id="essential-oils" class="dropdown-content z-depth-2">
+                <li><a href="#!">Peppermin Oil</a></li>
+                <li><a href="#!">Lavender Oil</a></li>
+            </ul>
+            <!-- Submenu:herbs -->
+            <ul id="herbs" class="dropdown-content z-depth-2">
+                <li><a href="#!">Liquid Extracts</a></li>
+                <li><a href="#!">Bulk Herbs</a></li>
+                <li><a href="#!">Spices</a></li>
+                <li><a href="#!">Termeric</a></li>
+            </ul>
+
+            <!-- Main menu -->
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#">Crazy Deals</a></li>
-                <li><a href="#">Supplements</a></li>
-                <li><a href="#">Essential Oils</a></li>
-                <li><a href="#">Herbs</a></li>
+                <!-- <li><a href="#">Supplements</a></li> -->
+                <li><a class="dropdown-button" href="#!" data-activates="supplements">Supplements</a></li>
+                <li><a class="dropdown-button" href="#!" data-activates="essential-oils">Essential Oils</a></li>
+                <li><a class="dropdown-button" href="#!" data-activates="herbs">Herbs</a></li>
                 <li><a href="#">Skin Care</a></li>
                 <li><a href="#">Rewards!</a></li>
                 <li><a href="sass.html"><i class="material-icons">search</i></a></li>
