--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <li><a class="dropdown-button" href="#!" data-activates="herbs">Herbs</a></li>
                 <li><a href="#">Skin Care</a></li>
                 <li><a href="#">Rewards!</a></li>
-                <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-                <li><a href="sass.html"><i class="material-icons grey-text">shopping_cart</i></a></li>
+                <li><a href="#"><i class="material-icons">search</i></a></li>
+                <li><a href="#"><i class="material-icons grey-text">shopping_cart</i></a></li>
             </ul>
           </div>
         </nav>
